# H-J

./: CMakeLists.txt  README.md  main.cpp
src/Generation/: Generator.cpp  Generator.h  GuiSuequenceFeatureReader.h  GuiSuequenceFiatureReader.cpp  InterfaceSequences.h  Reader.cpp  Reader.h  Sequences.cpp  Sequences.h
src/Sorts/: AbsractSort.cpp  AbsractSort.h  MakerGistograms.cpp  MakerGistograms.h  ReaderSequncesFiles.cpp  ReaderSequncesFiles.h  Sort.cpp  Sort.h
